Service class for fetching genres and saving to database.